--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,9 +36,7 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  /* border: 1px solid transparent; */
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
